CMS outputs links different to expected, css spacing fix

--- a/frontend/scss/molecules/_m-link-list.scss
+++ b/frontend/scss/molecules/_m-link-list.scss
@@ -13,6 +13,10 @@
 .m-link-list {
   @include untuck;
   margin-top: 40px;
+
+  .o-blocks &.o-blocks__block + & {
+    margin-top: 20px;
+  }
 }
 
 .m-link-list__sub-list {
